--- a/CV_PS_train_AE.ipynb
+++ b/CV_PS_train_AE.ipynb
@@ -99,6 +99,10 @@
     "\n",
     "# Setting the seed\n",
     "L.seed_everything(42)\n",
+    "torch.seed(42)\n",
+    "import random\n",
+    "random.seed(42)\n",
+    "np.random.seed(42)\n",
     "\n",
     "# Ensure that all operations are deterministic on GPU (if used) for reproducibility\n",
     "torch.backends.cudnn.deterministic = True\n",
@@ -388,12 +392,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
     "batch_size = 128\n",
-    "name = 'Oct16'\n",
+    "name = 'Oct16_1'\n",
     "model_path = '/home/dbreitman/CV_PS_denoising/Oct_models/AEs/'"
    ]
   },
@@ -575,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,11 +1045,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Autoencoder(base_channel_size = 64, latent_dim = 256, num_input_channels = 1, \n",
+    "model = Autoencoder(base_channel_size = 64, latent_dim = 64, num_input_channels = 1, \n",
     "                    num_output_channels = 2)\n",
     "#print(model)\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr = 1e-3)\n",
@@ -1054,19 +1058,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 | Loss 3.8648E+02 | Val Loss 2.8139E+02 | lr 1.0000E-03\n",
-      "Epoch 1 | Loss 2.0171E+02 | Val Loss 2.2030E+02 | lr 1.0000E-03 | VLoss FE 27.73% \n",
-      "Epoch 2 | Loss 2.3063E+02 | Val Loss 2.3220E+02 | lr 1.0000E-03 | VLoss FE -5.12% \n",
-      "Epoch 3 | Loss 1.6691E+02 | Val Loss 1.7434E+02 | lr 9.0000E-04 | VLoss FE 26.36% \n",
-      "Epoch 4 | Loss 1.5783E+02 | Val Loss 1.7512E+02 | lr 9.0000E-04 | VLoss FE -0.45% \n",
-      "Epoch 5 | Loss 1.4961E+02 | Val Loss 1.5333E+02 | lr 8.1000E-04 | VLoss FE 13.70% \n"
+      "Epoch 0 | Loss 1.7502E+03 | Val Loss 8.1490E+02 | lr 1.0000E-03\n",
+      "Epoch 1 | Loss 7.0406E+02 | Val Loss 6.3143E+02 | lr 1.0000E-03 | VLoss FE 29.06% \n",
+      "Epoch 2 | Loss 5.0003E+02 | Val Loss 5.2173E+02 | lr 1.0000E-03 | VLoss FE 21.03% \n",
+      "Epoch 3 | Loss 4.2135E+02 | Val Loss 4.9483E+02 | lr 1.0000E-03 | VLoss FE 5.44% \n",
+      "Epoch 4 | Loss 3.5152E+02 | Val Loss 4.2855E+02 | lr 1.0000E-03 | VLoss FE 15.47% \n",
+      "Epoch 5 | Loss 3.5612E+02 | Val Loss 3.0741E+02 | lr 1.0000E-03 | VLoss FE 39.40% \n",
+      "Epoch 6 | Loss 2.8622E+02 | Val Loss 2.6876E+02 | lr 1.0000E-03 | VLoss FE 14.38% \n",
+      "Epoch 7 | Loss 2.4138E+02 | Val Loss 3.1110E+02 | lr 1.0000E-03 | VLoss FE -13.61% \n",
+      "Epoch 8 | Loss 1.9565E+02 | Val Loss 3.5996E+02 | lr 9.0000E-04 | VLoss FE -25.34% \n",
+      "Epoch 9 | Loss 1.5771E+02 | Val Loss 1.1749E+02 | lr 8.1000E-05 | VLoss FE 128.75% \n",
+      "Epoch 10 | Loss 1.0775E+02 | Val Loss 1.0940E+02 | lr 8.1000E-05 | VLoss FE 7.39% \n",
+      "Epoch 11 | Loss 9.7290E+01 | Val Loss 9.1998E+01 | lr 8.1000E-05 | VLoss FE 18.92% \n",
+      "Epoch 12 | Loss 8.8179E+01 | Val Loss 9.4424E+01 | lr 8.1000E-05 | VLoss FE -2.57% \n",
+      "Epoch 13 | Loss 8.3905E+01 | Val Loss 7.9324E+01 | lr 7.2900E-05 | VLoss FE 15.98% \n",
+      "Epoch 14 | Loss 7.2770E+01 | Val Loss 6.0969E+01 | lr 7.2900E-05 | VLoss FE 30.10% \n",
+      "Epoch 15 | Loss 5.8099E+01 | Val Loss 5.6649E+01 | lr 7.2900E-05 | VLoss FE 7.63% \n",
+      "Epoch 16 | Loss 5.2121E+01 | Val Loss 5.0056E+01 | lr 7.2900E-05 | VLoss FE 13.17% \n",
+      "Epoch 17 | Loss 4.8596E+01 | Val Loss 4.6322E+01 | lr 7.2900E-05 | VLoss FE 8.06% \n",
+      "Epoch 18 | Loss 4.6044E+01 | Val Loss 4.7762E+01 | lr 7.2900E-05 | VLoss FE -3.01% \n",
+      "Epoch 19 | Loss 4.2161E+01 | Val Loss 4.0895E+01 | lr 6.5610E-05 | VLoss FE 13.27% \n",
+      "Epoch 20 | Loss 3.8992E+01 | Val Loss 4.0188E+01 | lr 6.5610E-05 | VLoss FE 1.76% \n",
+      "Epoch 21 | Loss 3.6880E+01 | Val Loss 3.9988E+01 | lr 6.5610E-05 | VLoss FE 0.50% \n",
+      "Epoch 22 | Loss 3.4641E+01 | Val Loss 4.0276E+01 | lr 6.5610E-05 | VLoss FE -0.71% \n",
+      "Epoch 23 | Loss 3.3753E+01 | Val Loss 3.8461E+01 | lr 5.9049E-05 | VLoss FE 3.97% \n",
+      "Epoch 24 | Loss 3.3323E+01 | Val Loss 3.4627E+01 | lr 5.9049E-05 | VLoss FE 11.07% \n",
+      "Epoch 25 | Loss 2.7905E+01 | Val Loss 3.1937E+01 | lr 5.9049E-05 | VLoss FE 8.42% \n",
+      "Epoch 26 | Loss 2.4879E+01 | Val Loss 2.9208E+01 | lr 5.9049E-05 | VLoss FE 9.34% \n",
+      "Epoch 27 | Loss 2.3954E+01 | Val Loss 2.8588E+01 | lr 5.9049E-05 | VLoss FE 2.17% \n",
+      "Epoch 28 | Loss 2.2786E+01 | Val Loss 2.6053E+01 | lr 5.9049E-05 | VLoss FE 9.73% \n",
+      "Epoch 29 | Loss 1.9816E+01 | Val Loss 2.5627E+01 | lr 5.9049E-05 | VLoss FE 1.66% \n",
+      "Epoch 30 | Loss 1.8117E+01 | Val Loss 2.1973E+01 | lr 5.9049E-05 | VLoss FE 16.63% \n",
+      "Epoch 31 | Loss 1.5909E+01 | Val Loss 2.1818E+01 | lr 5.9049E-05 | VLoss FE 0.71% \n",
+      "Epoch 32 | Loss 1.5039E+01 | Val Loss 2.1626E+01 | lr 5.9049E-05 | VLoss FE 0.88% \n",
+      "Epoch 33 | Loss 1.2685E+01 | Val Loss 1.8140E+01 | lr 5.9049E-05 | VLoss FE 19.22% \n",
+      "Epoch 34 | Loss 1.1527E+01 | Val Loss 1.7367E+01 | lr 5.9049E-05 | VLoss FE 4.45% \n",
+      "Epoch 35 | Loss 9.5833E+00 | Val Loss 1.2348E+01 | lr 5.9049E-05 | VLoss FE 40.64% \n",
+      "Epoch 36 | Loss 7.9901E+00 | Val Loss 9.8422E+00 | lr 5.9049E-05 | VLoss FE 25.46% \n",
+      "Epoch 37 | Loss 7.4931E+00 | Val Loss 9.8514E+00 | lr 5.9049E-05 | VLoss FE -0.09% \n",
+      "Epoch 38 | Loss 6.9022E+00 | Val Loss 5.9741E+00 | lr 5.3144E-05 | VLoss FE 64.75% \n",
+      "Epoch 39 | Loss 5.0009E+00 | Val Loss 4.4954E+00 | lr 5.3144E-05 | VLoss FE 32.89% \n",
+      "Epoch 40 | Loss 4.4698E+00 | Val Loss 4.4970E+00 | lr 5.3144E-05 | VLoss FE -0.04% \n",
+      "Epoch 41 | Loss 4.2583E+00 | Val Loss 4.5712E+00 | lr 4.7830E-05 | VLoss FE -1.66% \n",
+      "Epoch 42 | Loss 3.9883E+00 | Val Loss 4.1023E+00 | lr 4.3047E-06 | VLoss FE 9.58% \n",
+      "Epoch 43 | Loss 3.8893E+00 | Val Loss 4.1464E+00 | lr 4.3047E-06 | VLoss FE -1.06% \n",
+      "Epoch 44 | Loss 3.7811E+00 | Val Loss 4.0415E+00 | lr 3.8742E-07 | VLoss FE 1.51% \n",
+      "Epoch 45 | Loss 3.7510E+00 | Val Loss 4.0383E+00 | lr 3.8742E-07 | VLoss FE 0.08% \n",
+      "Epoch 46 | Loss 3.7625E+00 | Val Loss 4.0330E+00 | lr 3.8742E-07 | VLoss FE 0.13% \n",
+      "Epoch 47 | Loss 3.7577E+00 | Val Loss 4.0321E+00 | lr 3.8742E-07 | VLoss FE 0.02% \n",
+      "Epoch 48 | Loss 3.7553E+00 | Val Loss 4.0313E+00 | lr 3.8742E-07 | VLoss FE 0.02% \n",
+      "Epoch 49 | Loss 3.7514E+00 | Val Loss 4.0278E+00 | lr 3.8742E-07 | VLoss FE 0.09% \n",
+      "Epoch 50 | Loss 3.7449E+00 | Val Loss 4.0225E+00 | lr 3.8742E-07 | VLoss FE 0.13% \n",
+      "Epoch 51 | Loss 3.7366E+00 | Val Loss 4.0202E+00 | lr 3.8742E-07 | VLoss FE 0.06% \n",
+      "Epoch 52 | Loss 3.7297E+00 | Val Loss 4.0203E+00 | lr 3.8742E-07 | VLoss FE -0.00% \n",
+      "Epoch 53 | Loss 3.7234E+00 | Val Loss 4.0134E+00 | lr 3.4868E-07 | VLoss FE 0.17% \n",
+      "Epoch 54 | Loss 3.7176E+00 | Val Loss 4.0111E+00 | lr 3.4868E-07 | VLoss FE 0.06% \n",
+      "Epoch 55 | Loss 3.7123E+00 | Val Loss 4.0096E+00 | lr 3.4868E-07 | VLoss FE 0.04% \n",
+      "Epoch 56 | Loss 3.7091E+00 | Val Loss 4.0093E+00 | lr 3.4868E-07 | VLoss FE 0.01% \n",
+      "Epoch 57 | Loss 3.7142E+00 | Val Loss 3.9966E+00 | lr 3.4868E-08 | VLoss FE 0.32% \n",
+      "Epoch 58 | Loss 3.7054E+00 | Val Loss 3.9906E+00 | lr 3.4868E-08 | VLoss FE 0.15% \n",
+      "Epoch 59 | Loss 3.7034E+00 | Val Loss 3.9879E+00 | lr 3.4868E-08 | VLoss FE 0.07% \n",
+      "Epoch 60 | Loss 3.7030E+00 | Val Loss 3.9870E+00 | lr 3.4868E-08 | VLoss FE 0.02% \n",
+      "Epoch 61 | Loss 3.7040E+00 | Val Loss 3.9866E+00 | lr 3.4868E-08 | VLoss FE 0.01% \n",
+      "Epoch 62 | Loss 3.7002E+00 | Val Loss 3.9866E+00 | lr 3.4868E-09 | VLoss FE -0.00% \n",
+      "Epoch 63 | Loss 3.7005E+00 | Val Loss 3.9864E+00 | lr 3.1381E-09 | VLoss FE 0.00% \n",
+      "Epoch 64 | Loss 3.7010E+00 | Val Loss 3.9865E+00 | lr 3.1381E-10 | VLoss FE -0.00% \n",
+      "Epoch 65 | Loss 3.7010E+00 | Val Loss 3.9865E+00 | lr 2.8243E-11 | VLoss FE -0.00% \n",
+      "Epoch 66 | Loss 3.7011E+00 | Val Loss 3.9865E+00 | lr 2.5419E-12 | VLoss FE -0.00% \n"
      ]
     }
    ],
@@ -1161,7 +1226,7 @@
     "            if epoch > 10 and plateau_percent < 1e-3:\n",
     "                # Stop if if plateaued for 10 epochs\n",
     "                epoch = epochs\n",
-    "            elif epoch > 4 and np.any(np.array(all_percents[-3:-1]) < 0):\n",
+    "            elif epoch > 4 and (np.any(np.array(all_percents[-3:-1]) < 0) or percent < -5):\n",
     "                scheduler2.step()\n",
     "                scheduler1.step()\n",
     "            else:\n",
